<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewActivity">

    <TextView
        android:id="@+id/textViewOverviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_overview_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOverviewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="165dp"
        android:text="@string/text_view_overview_a"
        app:layout_constraintEnd_toStartOf="@+id/textViewOverviewB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverviewLabel" />

    <TextView
        android:id="@+id/textViewOverviewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/text_view_overview_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOverviewA"
        app:layout_constraintTop_toTopOf="@+id/textViewOverviewA" />

    <TextView
        android:id="@+id/textViewOverviewC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_view_overview_c"
        app:layout_constraintEnd_toEndOf="@+id/textViewOverviewA"
        app:layout_constraintStart_toStartOf="@+id/textViewOverviewA"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverviewA" />

</androidx.constraintlayout.widget.ConstraintLayout>